@@ -40,8 +40,8 @@
 /**
  * Program version number and year (copyright).
  */
-#define VERS "2.3.1"
-#define YEAR "2005 - 2008"
+#define VERS "2.3.2"
+#define YEAR "2005 - 2009"
 
 /** Home dir name */
 //#define HOMEDIRNAME ".bygfoot-cvs"
