@@ -232,9 +232,6 @@ live_game_fill_new_unit(LiveGameUnit *new)
 	(1 + (const_float("float_player_boost_injury_effect") *
 	      (tm0->boost != 0 || tm1->boost != 0)));
 
-    foul_event_prob = const_float("float_live_game_foul") *
-	(1 + (tm0->boost + tm1->boost) * const_float("float_team_boost_foul_factor"));
-
     new->possession = old->possession;
 
     if(old->event.type == LIVE_GAME_EVENT_GENERAL)
@@ -243,6 +240,8 @@ live_game_fill_new_unit(LiveGameUnit *new)
     if(new->area == LIVE_GAME_UNIT_AREA_ATTACK)
 	scoring_chance = const_float("float_live_game_scoring_chance") *
 	    live_game_pit_teams(new, const_float("float_live_game_scoring_chance_team_exponent"));
+
+    foul_event_prob = game_get_foul_prob(match, new);
 
     if(rndom < foul_event_prob)
 	new->event.type = LIVE_GAME_EVENT_FOUL;
@@ -360,6 +359,7 @@ live_game_event_foul(void)
 #endif
 
     gfloat rndom = math_rnd(0, 1);
+    gfloat reduction_factor = 1;
     gint type, fouled_player, foul_player, foul_team;
 
     if((debug > 100 && stat2 != -1) ||
@@ -393,16 +393,22 @@ live_game_event_foul(void)
 			    last_unit.area, 0, -1, FALSE);
     }
 
-    if(rndom < const_float("float_live_game_foul_red_injury"))
+    /* Probability of hard foul gets reduced if the player is already booked, except when boost is on. */
+    if(tms[foul_team]->boost != 1 && 
+       player_of_id_team(tms[foul_team], foul_player)->card_status == PLAYER_CARD_STATUS_YELLOW)
+        reduction_factor = 1 - const_float("float_live_game_foul_booked_reduction");
+
+    if(rndom < const_float("float_live_game_foul_red_injury") * reduction_factor)
 	type = LIVE_GAME_EVENT_FOUL_RED_INJURY;
-    else if(rndom < const_float("float_live_game_foul_red"))
+    else if(rndom < const_float("float_live_game_foul_red") * reduction_factor)
 	type = LIVE_GAME_EVENT_FOUL_RED;
-    else if(rndom < const_float("float_live_game_foul_yellow"))
+    else if(rndom < const_float("float_live_game_foul_yellow") * reduction_factor)
     {
 	type = LIVE_GAME_EVENT_FOUL_YELLOW;
 	player_card_set(player_of_id_team(tms[foul_team], foul_player),
 			match->fix->clid, PLAYER_VALUE_CARD_YELLOW, 1, TRUE);
 	player_of_id_team(tms[foul_team], foul_player)->career[PLAYER_VALUE_CARD_YELLOW]++;
+        player_of_id_team(tms[foul_team], foul_player)->card_status = PLAYER_CARD_STATUS_YELLOW;
     }
     else
 	type = LIVE_GAME_EVENT_FOUL;
@@ -420,6 +426,7 @@ live_game_event_foul(void)
 				 query_live_game_second_yellow(foul_team, foul_player));
 	if(type == LIVE_GAME_EVENT_FOUL_RED_INJURY)
 	    live_game_event_injury(!foul_team, fouled_player, TRUE);
+        player_of_id_team(tms[foul_team], foul_player)->card_status = PLAYER_CARD_STATUS_RED;
     }
 
     if(last_unit.area == LIVE_GAME_UNIT_AREA_ATTACK && foul_team !=
